# hacs-recteq

./: .devcontainer.json  .ruff.toml  README.md  hacs.json  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  release.yml  validate.yml
config/: configuration.yaml
custom_components/: manifest.json
custom_components/recteq/: __init__.py  climate.py  config_flow.py  const.py  device.py  entity.py  manifest.json  sensor.py  switch.py
custom_components/recteq/translations/: en.json
scripts/: setup
