[tool.poetry]
name = "custom_components"
version = "0.0.0"
description = ""
authors = ["James Smith"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorlog = "^6.8.0"
homeassistant = "^2023.11.3"
ruff = "^0.2.0"
tinytuya = "^1.13.1"
asyncio = "^3.4.3"
urllib3 = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
